--- a/index.html
+++ b/index.html
@@ -5,3 +5,110 @@ liangzhenyuanzhenkeai
 <iframe width=330 height=86 src="child.html"></iframe>
 <p>after iframe</p>
 <p>i am child</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>宇宙探险者</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        header, footer {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        main {
+            background: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3, h4, h5, h6 {
+            color: #333;
+        }
+        ul, ol {
+            margin: 20px 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        mark {
+            background: yellow;
+        }
+        em {
+            font-style: italic;
+        }
+        b, strong {
+            font-weight: bold;
+        }
+        ruby {
+            font-size: 1.2em;
+        }
+        sup {
+            vertical-align: super;
+            font-size: smaller;
+        }
+        sub {
+            vertical-align: sub;
+            font-size: smaller;
+        }
+        abbr {
+            border-bottom: 1px dotted #ccc;
+            cursor: help;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>宇宙探险者</h1>
+    </header>
+    <main>
+        <section>
+            <h2>介绍</h2>
+            <p>欢迎来到我们的网站，我们将带您进入一个充满神秘与冒险的宇宙世界。在这里，您可以了解到宇宙中的各种奇观和发现。</p>
+        </section>
+        <section>
+            <h2>最新发现</h2>
+            <article>
+                <h3>新星系的发现</h3>
+                <p><mark>我们刚刚发现了一个新的星系，它位于银河系的边缘，距离地球约10亿光年。</mark></p>
+                <p>科学家们认为这个星系的形成可能与黑洞有关。</p>
+            </article>
+            <article>
+                <h3>未知行星的发现</h3>
+                <p><strong>在最近的一次太空任务中，我们发现了一颗拥有液态水的新行星。</strong></p>
+                <p>这颗行星的表面温度适宜，可能存在生命的条件。</p>
+            </article>
+        </section>
+        <section>
+            <h2>未来计划</h2>
+            <ul>
+                <li>进一步研究新发现的星系</li>
+                <li>探索未知行星的详细情况</li>
+                <li>寻找其他潜在的宜居星球</li>
+            </ul>
+        </section>
+        <section>
+            <h2>参考资料</h2>
+            <dl>
+                <dt><abbr title="Astronomical Unit">AU</abbr></dt>
+                <dd>天文单位，等于地球到太阳的平均距离（约1.496 x 10^8公里）</dd>
+                <dt><abbr title="Light Year">LY</abbr></dt>
+                <dd>光年，光在一年时间内传播的距离（约9.46 x 10^12公里）</dd>
+            </dl>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 宇宙探险者. 版权所有.</p>
+    </footer>
+</body>
+</html>
