--- a/index.html
+++ b/index.html
@@ -112,3 +112,66 @@ liangzhenyuanzhenkeai
     </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>成语生成画面</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        header, footer {
+            background: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
+        main {
+            background: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        ul {
+            margin: 20px 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>成语生成画面</h1>
+    </header>
+    <main>
+        <section>
+            <h2>成语：画龙点睛</h2>
+            <p><strong>拼音：huà lóng diǎn jīng</strong></p>
+            <ul>
+                <li>画龙 - 绘制龙的形象</li>
+                <li>点睛 - 在眼睛处画上一点，使龙栩栩如生</li>
+            </ul>
+            <img src="images/hualongdiandianjing.jpg" alt="画龙点睛">
+            <p>这是一幅描绘了画家精心绘制龙的画面，最终在龙的眼睛处点上一点，使其栩栩如生。</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 成语生成画面. 版权所有.</p>
+    </footer>
+</body>
+</html>
