--- a/index.html
+++ b/index.html
@@ -175,3 +175,21 @@ liangzhenyuanzhenkeai
     </footer>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>成语视频生成器</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>成语视频生成器</h1>
+    <form id="idiomForm">
+        <label for="idiom">输入成语:</label>
+        <input type="text" id="idiom" name="idiom" required>
+        <button type="submit">生成视频</button>
+    </form>
+    <div id="output"></div>
+    <script src="script.js"></script>
+</body>
+</html>
