--- a/index.html
+++ b/index.html
@@ -193,3 +193,20 @@ liangzhenyuanzhenkeai
     <script src="script.js"></script>
 </body>
 </html>
+body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+}
+
+h1 {
+    color: #333;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+#output video {
+    max-width: 100%;
+    height: auto;
+}
