--- a/index.html
+++ b/index.html
@@ -209,3 +209,22 @@ form {
     max-width: 100%;
     height: auto;
 }
+<!DOCTYPE html>
+<html lang=en>
+    <head>
+        <meta charset="UTF-8">
+        <style>
+        </style>
+        <script>
+            for(i=0;i<=9;i++){
+                for(j=0;j<=9;j++){
+                    document.write(i+"*"+j+"="+i*j + " ");
+                }
+                document.write("<br>");
+            }
+        </script>
+        <title>Document</title>
+    </head>
+    <body>
+    </body>
+</html>
