--- a/zuoye1.html
+++ b/zuoye1.html
@@ -1,1 +1,107 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>梁祯元：ENHYPEN 的闪耀之星</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    h1,
+    h2 {
+      text-align: center;
+      color: #0066cc;
+    }
+
+    ul {
+      list-style-type: circle;
+      margin-left: 30px;
+    }
+
+    ol {
+      margin-left: 30px;
+    }
+
+    dl {
+      margin-left: 30px;
+    }
+
+    mark {
+      background-color: #ffff00;
+      padding: 3px;
+    }
+
+    em {
+      font-style: italic;
+    }
+
+    b {
+      font-weight: bold;
+    }
+
+    strong {
+      color: #cc0000;
+    }
+
+    ruby {
+      font-size: 1.2em;
+    }
+
+    sup {
+      vertical-align: super;
+      font-size: 0.8em;
+    }
+
+    sub {
+      vertical-align: sub;
+      font-size: 0.8em;
+    }
+
+    abbr {
+      text-decoration: underline dotted;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- h1 标题 -->
+  <h1>梁祯元：ENHYPEN 的魅力领袖</h1>
+
+  <!-- h2 副标题 -->
+  <h2>舞台上下的多面魅力</h2>
+
+  <!-- p 段落 -->
+  <p>梁祯元，作为 ENHYPEN 男团队长，<mark>以其独特的魅力和卓越的领导才能</mark> 引领着团队在 K-pop 舞台上绽放光彩。他不仅拥有帅气的外表，更有着深邃的内心世界和对音乐的炽热情感。</p>
+
+  <!-- ul 无序列表 -->
+  <ul>
+    <li>他在舞台上的 <em>舞蹈表现</em> 堪称惊艳，每一个动作都充满力量与节奏感，仿佛在诉说着一个故事。</li>
+    <li>其 <b>歌唱实力</b> 也不容小觑，清澈而富有感染力的嗓音能够轻松地打动听众的心弦。</li>
+    <li>在团队合作方面，他总是能够敏锐地察觉到成员们的需求，如同团队的 <strong>定海神针</strong>，让整个团队紧密相连。</li>
+  </ul>
+
+  <!-- ol 有序列表 -->
+  <ol>
+    <li>在 ENHYPEN 的出道历程中，梁祯元的 <ruby>第<rp>(</rp><rt>dì</rt><rp>)</rp> 一<rp>(</rp><rt>yī</rt><rp>)</rp> 步</ruby> 就展现出了非凡的决心。从参加生存节目开始，他就以坚定的信念努力拼搏。</li>
+    <li>随着团队的正式出道，他在 <abbr title="Album">专辑</abbr> 制作过程中积极参与，为每一首歌曲注入自己的创意与情感。</li>
+    <li>在巡回演唱会中，他更是以精彩的表演回馈粉丝，让每一场演出都成为粉丝们心中难忘的回忆，例如在 <sup>2023</sup> 年的世界巡回演唱会中，他的舞台魅力达到了新的高度。</li>
+  </ol>
+
+  <!-- dl 定义列表 -->
+  <dl>
+    <dt>队长职责</dt>
+    <dd>梁祯元作为队长，需要在团队决策中发挥关键作用，协调成员之间的关系，确保团队的和谐稳定发展，就像一艘船的船长，引领着团队在 K-pop 的海洋中航行。</dd>
+    <dt>艺术追求</dt>
+    <dd>他不断追求艺术上的突破，无论是在舞蹈风格的探索上，还是在歌唱技巧的提升上，都始终保持着积极进取的态度，努力为粉丝带来更多优质的音乐作品和舞台表演，如在新曲中的 <sub>高音挑战</sub> 就展现了他对自我的超越。</dd>
+  </dl>
+
+</body>
+
+</html>
