--- a/zuoye1.html
+++ b/zuoye1.html
@@ -105,3 +105,135 @@
 </body>
 
 </html>
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>梁祯元：ENHYPEN 的闪耀之星</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    h1,
+    h2 {
+      text-align: center;
+      color: #0066cc;
+    }
+
+    ul {
+      list-style-type: circle;
+      margin-left: 30px;
+    }
+
+    ol {
+      margin-left: 30px;
+    }
+
+    dl {
+      margin-left: 30px;
+    }
+
+    mark {
+      background-color: #ffff00;
+      padding: 3px;
+    }
+
+    em {
+      font-style: italic;
+    }
+
+    b {
+      font-weight: bold;
+    }
+
+    strong {
+      color: #cc0000;
+    }
+
+    ruby {
+      font-size: 1.2em;
+    }
+
+    sup {
+      vertical-align: super;
+      font-size: 0.8em;
+    }
+
+    sub {
+      vertical-align: sub;
+      font-size: 0.8em;
+    }
+
+    abbr {
+      text-decoration: underline dotted;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+    }
+
+    video {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 20px auto;
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- h1 标题 -->
+  <h1>梁祯元：ENHYPEN 的魅力领袖</h1>
+
+  <!-- 插入梁祯元的图片 -->
+  <img src="https://i0.hdslb.com/bfs/archive/2915cc7ca779f13602f271fb38ed52eddab51abe.jpg" alt="梁祯元">
+
+  <!-- h2 副标题 -->
+  <h2>舞台上下的多面魅力</h2>
+
+  <!-- p 段落 -->
+  <p>梁祯元，2004年2月9日出生于韩国首尔市，是韩国流行乐男歌手，担任男子演唱组合ENHYPEN队长{insert\_element\_0\_}. 他以其独特的魅力和卓越的领导才能引领着团队在 K-pop 舞台上绽放光彩，不仅拥有帅气的外表，更有着深邃的内心世界和对音乐的炽热情感{insert\_element\_1\_}.</p>
+
+  <!-- ul 无序列表 -->
+  <ul>
+    <li>他在舞台上的 <em>舞蹈表现</em> 堪称惊艳，每一个动作都充满力量与节奏感，仿佛在诉说着一个故事。其舞蹈力度和节奏感的把握十分精准，能够将舞蹈与音乐完美融合，给观众带来强烈的视觉冲击{insert\_element\_2\_}.</li>
+    <li>其 <b>歌唱实力</b> 也不容小觑，清澈而富有感染力的嗓音能够轻松地打动听众的心弦。他的音域宽广，高音嘹亮且具有穿透力，低音沉稳而富有磁性，在不同风格的歌曲中都能展现出出色的演唱技巧{insert\_element\_3\_}.</li>
+    <li>在团队合作方面，他总是能够敏锐地察觉到成员们的需求，如同团队的 <strong>定海神针</strong>，让整个团队紧密相连。作为队长，他善于协调成员之间的关系，充分发挥每个成员的优势，使团队在舞台上呈现出最佳的表演状态{insert\_element\_4\_}.</li>
+  </ul>
+
+  <!-- ol 有序列表 -->
+  <ol>
+    <li>在 ENHYPEN 的出道历程中，梁祯元的 <ruby>第<rp>(</rp><rt>dì</rt><rp>)</rp> 一<rp>(</rp><rt>yī</rt><rp>)</rp> 步</ruby> 就展现出了非凡的决心。2020年6月26日，他首次亮相BIGHIT ENTERTAINMENT与CJ ENM联手打造的选秀节目《I-LAND》，并凭借出色的表现荣获总决赛冠军{insert\_element\_5\_}.</li>
+    <li>随着团队的正式出道，他在 <abbr title="Album">专辑</abbr> 制作过程中积极参与，为每一首歌曲注入自己的创意与情感。例如，在首张迷你专辑《BORDER:DAY ONE》中，他参与了歌曲的创作和编曲，使专辑呈现出独特的风格和魅力{insert\_element\_6\_}.</li>
+    <li>在巡回演唱会中，他更是以精彩的表演回馈粉丝，让每一场演出都成为粉丝们心中难忘的回忆。比如在2023年的世界巡回演唱会中，他的舞台魅力达到了新的高度，无论是激情四溢的舞蹈还是深情动人的演唱，都让现场观众沉浸其中{insert\_element\_7\_}.</li>
+  </ol>
+
+  <!-- dl 定义列表 -->
+  <dl>
+    <dt>队长职责</dt>
+    <dd>梁祯元作为队长，需要在团队决策中发挥关键作用，协调成员之间的关系，确保团队的和谐稳定发展，就像一艘船的船长，引领着团队在 K-pop 的海洋中航行。他要负责组织团队的排练和演出，制定训练计划，同时还要关注成员的身心健康，为团队的发展提供全方位的支持{insert\_element\_8\_}.</dd>
+    <dt>艺术追求</dt>
+    <dd>他不断追求艺术上的突破，无论是在舞蹈风格的探索上，还是在歌唱技巧的提升上，都始终保持着积极进取的态度，努力为粉丝带来更多优质的音乐作品和舞台表演。他经常参加各种舞蹈和声乐培训课程，不断学习和吸收新的艺术元素，将其融入到自己的表演中，展现出了对艺术的执着追求和高度的敬业精神{insert\_element\_9\_}.</dd>
+  </dl>
+
+  <!-- 插入梁祯元的表演视频 -->
+  <video controls>
+    <source src="//player.bilibili.com/player.html?isOutside=true&aid=113535027906279&bvid=BV1izBpYFE64&cid=26949390204&p=1" type="video/mp4">
+  </video>
+
+</body>
+
+</html>
