--- a/zuoye1.html
+++ b/zuoye1.html
@@ -41,11 +41,16 @@
 <body>
     <h1>ENHYPEN 男团队长 - 梁祯元</h1>
     <p><strong>梁祯元</strong>（Jungwon），是一位多才多艺的韩国男歌手和舞者，目前担任全球知名的K-Pop男子团体ENHYPEN的队长。</p>
+    </ul>
+            <img src="liangzhenyuan.jpg" alt="梁祯元">
     <h2>个人简介</h2>
-    <p>梁祯元出生于2004年2月9日，来自韩国首尔，是ENHYPEN组合中年龄最大的成员之一。他以出色的领导能力和舞台表现力而著称。</p>
+    <p>梁祯元出生于2004年2月9日，来自韩国首尔，是ENHYPEN组合中年龄较小的成员，却以出色的领导能力和舞台表现力而著称。</p>
+    <p>MBTI：ESTJ 血型：AB</p>
     <h3>职业生涯</h3>
     <ul>
-        <li><strong>2020年：</strong>参加选秀节目<mark>I-LAND</mark>获得第一名，作为ENHYPEN的成员正式出道，并担任队长。</li>
+        <li><strong>2017年：</strong>在SM公司当过练习生。</li>
+        <li><strong>2018年：</strong>在BIGHIT公司（现为HYBE）联系了一年四个月。</li>
+        <li><strong>2020年：</strong>参加选秀节目I-LAND<mark>获得第一名</mark>，作为ENHYPEN的成员正式出道，并担任队长。</li>
         <li><strong>2021年：</strong>随ENHYPEN发布了首张迷你专辑《BORDER: DAY ONE》。</li>
     </ul>
     <h3>特长与爱好</h3>
@@ -66,7 +71,8 @@
     <h3>粉丝互动</h3>
     <p>梁祯元非常重视与粉丝的互动，经常在社交媒体上分享日常生活和工作动态。他还通过直播和粉丝见面会与全球粉丝保持紧密联系。</p>
     <h2>未来展望</h2>
-    <p><em>“我希望在未来的日子里，能够带领ENHYPEN走向更高的巅峰。”</em> —— 梁祯元</p>
-    <p><b>让我们一起期待梁祯元和他的团队在未来取得更多的辉煌成就！</b></p>
+    <p><em>“愿我对这份幸福感到漠然之日永不到来。”</em> —— 梁祯元</p>
+    <p><b>让我们一起期待梁祯元和ENHYPEN在未来取得更多的辉煌成就！</b></p>
+    <iframe src="//player.bilibili.com/player.html?isOutside=true&aid=113535027906279&bvid=BV1izBpYFE64&cid=26949390204&p=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 </body>
 </html>
