--- a/zuoye1.html
+++ b/zuoye1.html
@@ -42,7 +42,7 @@
     <h1>ENHYPEN 男团队长 - 梁祯元</h1>
     <p><strong>梁祯元</strong>（Jungwon），是一位多才多艺的韩国男歌手和舞者，目前担任全球知名的K-Pop男子团体ENHYPEN的队长。</p>
     </ul>
-            <img src="images/liangzhenyuan.jpg" alt="梁祯元">
+            <img width=800 height=500 src="images/liangzhenyuan.jpg" alt="梁祯元">
     <h2>个人简介</h2>
     <p>梁祯元出生于2004年2月9日，来自韩国首尔，是ENHYPEN组合中年龄较小的成员，却以出色的领导能力和舞台表现力而著称。</p>
     <p>MBTI：ESTJ 血型：AB</p>
