--- a/zuoye2.html
+++ b/zuoye2.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>成语生成画面</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            color: blue; /* 将标题颜色改为蓝色 */
+        }
+        ul {
+            list-style-type: none;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <h1>成语：守株待兔 (shǒu zhū dài tù)</h1>
+    <p>成语解释：比喻死守狭隘的经验，不知变通，或妄想不劳而获，坐享其成。</p>
+    <ul>
+        <li>守株 - 守候在树根旁</li>
+        <li>待兔 - 等待兔子撞在树上</li>
+    </ul>
+    <img src="images/shouzhudaitu.jpg" alt="守株待兔">
+    <p>生成过程简述：首先，我让AI生成一个守株待兔的画面，但是它没有理解我的意思，生成了一只兔子在等待。后来，我通过给它介绍典故重新描述调整细节，最后将生成的画面保存为图片文件，并在网页中展示。</p>
+</body>
+</html>
