--- a/zuoye2.html
+++ b/zuoye2.html
@@ -28,7 +28,7 @@
         <li>守株 - 守候在树根旁</li>
         <li>待兔 - 等待兔子撞在树上</li>
     </ul>
-    <img src="images/shouzhudaitu.jpg" alt="守株待兔">
+    <img src="shouzhudaitu.jpg" alt="守株待兔">
     <p>生成过程简述：首先，我让AI生成一个守株待兔的画面，但是它没有理解我的意思，生成了一只兔子在等待。后来，我通过给它介绍典故重新描述调整细节，最后将生成的画面保存为图片文件，并在网页中展示。</p>
 </body>
 </html>
