--- a/zuoye3.html
+++ b/zuoye3.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>守株待兔</title>
+    <header>
+        <h1><ruby>守 <rt>shǒu</rt></ruby> 株 <rt>zhū</rt></ruby> 待 <rt>dài</rt></ruby> 兔 <rt>tù</rt></ruby></h1>
+    </header>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,11 +50,7 @@
         
         <h3>其他元素</h3>
         <p>这是一个<abbr title="HyperText Markup Language">HTML</abbr>文档，其中包含一些文档级别的元素。</p>
-        <p>这是一段带有<ruby>漢 <rp>(</rp><rt>kàn</rt><rp>)</rp></ruby>字的文本。</p>
-        <p>这是一个带有上标和下标的公式：x<sup>2</sup> + y<sub>2</sub> = z<sup>2</sup></p>
+        <p>这是一段带有<ruby>漢 <rp>(</rp><rt>kàn</rt><rp>)</rp></ruby>字的文本。</p>\
     </section>
-    <footer>
-        <p>&copy; 2023 守株待兔示例页面</p>
-    </footer>
 </body>
 </html>
