--- a/zuoye3.html
+++ b/zuoye3.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1>守株待兔</h1>
+        <h1><ruby>守 <rt>shǒu</rt></ruby> 株 <rt>zhū</rt></ruby> 待 <rt>dài</rt></ruby> 兔 <rt>tù</rt></ruby></h1>
     </header>
     <section>
         <h2>简介</h2>
