--- a/zuoye3.html
+++ b/zuoye3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <header>
-        <h1><ruby>守 <rt>shǒu</rt></ruby> 株 <rt>zhū</rt></ruby> 待 <rt>dài</rt></ruby> 兔 <rt>tù</rt></ruby></h1>
+        <title>守株待兔(shǒu zhū dài tù)</title>
     </header>
     <style>
         body {
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        <h1><ruby>守 <rt>shǒu</rt></ruby> 株 <rt>zhū</rt></ruby> 待 <rt>dài</rt></ruby> 兔 <rt>tù</rt></ruby></h1>
+        <h1>守株待兔 (shǒu zhū dài tù)</h1>
     </header>
     <section>
         <h2>简介</h2>
