--- a/zuoye3.html
+++ b/zuoye3.html
@@ -30,9 +30,9 @@
         <p>守株待兔是一种古代的寓言故事，讲述了一个人在树下等待一只兔子从树上掉下来的故事。这个故事寓意着不劳而获、坐享其成的想法是不切实际的。</p>
         
         <h3>生成图片</h3>
-        <li><em>关键帧1：农夫劳作</em></li>
-        <li><mark>阳光明媚的田野上，一位头戴斗笠、身着粗布衣裳的农夫，手持锄头在自家田地里辛勤地劳作着。他弯着腰，一下一下地锄着地，身旁是一片刚种下不久，嫩绿嫩绿的庄稼苗，远处还有几棵大树矗立着。</mark></li>
-        <img src="1.jpg" alt="1">
+        <li><mark>关键帧1：农夫劳作</mark></li>
+        <li><em>阳光明媚的田野上，一位头戴斗笠、身着粗布衣裳的农夫，手持锄头在自家田地里辛勤地劳作着。他弯着腰，一下一下地锄着地，身旁是一片刚种下不久，嫩绿嫩绿的庄稼苗，远处还有几棵大树矗立着。</em></li>
+        <img src="1.png" alt="1">
         
         <h3>生成视频</h3>
         <video controls>
