--- a/zuoye3.html
+++ b/zuoye3.html
@@ -33,10 +33,14 @@
         <li><mark>关键帧1：农夫劳作</mark></li>
         <li><em>阳光明媚的田野上，一位头戴斗笠、身着粗布衣裳的农夫，手持锄头在自家田地里辛勤地劳作着。他弯着腰，一下一下地锄着地，身旁是一片刚种下不久，嫩绿嫩绿的庄稼苗，远处还有几棵大树矗立着。</em></li>
         <img src="1.png" alt="1">
+
+         <li><mark>关键帧2：兔子撞树</mark></li>
+        <li><em>突然，一只野兔从旁边的草丛中惊慌失措地窜了出来，它的眼睛瞪得大大的，耳朵高高竖起，没命地奔跑着。可能是受到了什么惊吓，在经过田地边的一棵大树时，它直直地撞在了树干上，“砰”的一声，然后便倒地不动了。</em></li>
+        <img src="2.png" alt="2">
         
         <h3>生成视频</h3>
         <video controls>
-            <source src="shouzhudaitu.mp4" type="video/mp4">
+            <source width=800 height=800 src="shouzhudaitu.mp4" type="video/mp4">
         </video>
         
         <h3>相关词汇</h3>
