--- a/zuoye3.html
+++ b/zuoye3.html
@@ -61,9 +61,7 @@
         
         <h3>相关词汇</h3>
         <ul>
-            <li><mark>守株待兔</mark></li>
-            <li><em>寓言故事</em></li>
-            <li><strong>不劳而获</strong></li>
+            <li><b>不劳而获</b></li>
             <li><b>坐享其成</b></li>
 
     </section>
