--- a/index.html
+++ b/index.html
@@ -353,3 +353,33 @@ Nickname: <INPUT NAME="nickname" SIZE="42">
     </script>
 </body>
 </html>
+<form id="myForm">
+    密码: <input type="password" id="password">
+    <input type="button" value="提交" onclick="check()">
+  </form>
+
+  <p id="errorMessage"></p>
+
+  <script>
+    function check(){
+      var password = document.getElementById("password").value;
+      var hasUpperCase = false;
+      var hasLowerCase = false;
+      var hasNumber = false;
+
+      for (var i = 0; i < password.length; i++) {
+        var char = password.charAt(i);
+        if (/[A-Z]/.test(char)) {
+          hasUpperCase = true;
+        } else if (/[a-z]/.test(char)) {
+          hasLowerCase = true;
+        } else if (/[0-9]/.test(char)) {
+          hasNumber = true;
+        }
+      }
+
+      if (!hasUpperCase ||!hasLowerCase ||!hasNumber) {
+        document.getElementById("errorMessage").innerHTML = "密码必须包含大写字母、小写字母和数字";
+      }
+    }
+  </script>
