--- a/index.html
+++ b/index.html
@@ -457,3 +457,20 @@ function check(){
   }
 }
 </script>
+<form id="myForm">
+    多行文本
+    <textarea id="my_text" rows="20" cols="40">请在这里录入</textarea>
+    <input type="button" value="提交" onclick="check()">
+</form>
+
+<p id="message"></p>
+
+<script>
+    function check() {
+        var my_text = document.getElementById("my_text");
+        var text = my_text.value;
+        var filteredText = text.replace(/oeasy/g, '');
+        var message = document.getElementById("message");
+        message.innerHTML = filteredText;
+    }
+</script>
